split is done moving to the tree i made tree and printtree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
         "format": "c",
         "initializer_list": "c",
         "span": "c",
-        "text_encoding": "c"
+        "text_encoding": "c",
+        "minishell": "c"
     },
     "files.exclude": {
         "**/.git": true,
