--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
 		"minishell": "c",
 		"builtins.h": "c",
 		"env.h": "c",
-		"typeinfo": "c"
+		"typeinfo": "c",
+		"string.h": "c"
 	},
 	"files.exclude": {
 		"**/.git": true,
