parsing norminated and done(95%)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,11 @@
         "initializer_list": "c",
         "span": "c",
         "text_encoding": "c",
-        "minishell": "c"
+        "minishell": "c",
+        "algorithm": "c",
+        "string.h": "c",
+        "signal.h": "c",
+        "unistd.h": "c"
     },
     "files.exclude": {
         "**/.git": true,
@@ -26,8 +30,13 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true
+        "**/Thumbs.db": true,
+        ".vscode": true,
+        ".gitignore": true
     },
-    "hide-files.files": [],
+    "hide-files.files": [
+        ".vscode",
+        ".gitignore"
+    ],
     "makefile.configureOnOpen": false
 }
